--- a/SimpleVoc/SimpleVoc.csproj
+++ b/SimpleVoc/SimpleVoc.csproj
@@ -44,8 +44,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SimpleVoc.cs" />
+    <Compile Include="SimpleVocConnection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SimpleVocException.cs" />
     <Compile Include="SimpleVocValue.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
